# MiRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  Inforag-impl.ipynb  Inforag-mlx.ipynb  LICENSE  README.md  docker-compose.yml  flake.nix  hello.py  pyproject.toml
.searxng/: settings.yml
src/MiRAG/: main.py
src/api/: cli.py  config.py  dependencies.py  main.py  models.py
src/api/auth/: auth.py  middleware.py  models.py  services.py  validators.py
src/api/chat/: chat.py
src/api/data/models/: chat.py
src/api/db/: __init__.py  tables.py
src/api/models/: query.py
src/api/services/: initialize_firebase.py
src/api/services/chat/: chat_service.py  chat_store_service.py  dynamodb_setup.py
src/api/services/llamaindex/: corpus.py
src/api/utils/: chat.py  observability.py
src/crag/: main.py  utils.py
src/longrag/: main.py  utils.py
src/mirag/: __init__.py  api.py  benchmarks.py  cli.py  config.py  constants.py  data_processing.py  events.py  hf_document.py  index_management.py  longrag_retriever.py  main.py  metrics.py  prompts.py  result_handling.py  workflows.py
src/mirag/workflows_factory/: base.py  simulation.py
src/preprocess/: process_wiki_page.py
src/utils/: async_utils.py  gemini.py  load_data_util.py  logger.py  mp_util.py  retriever.py  run_indexing.py  searxng.py  summarize.py  wiki_util.py
