[project]
authors = [
  { name = "Denrei Keith De Jesus", email = "denreikeith@gmail.com" },
  { name = "Stephanie Palero", email = "s.palero.526878@umindanao.edu.ph" },
  { name = "Joshua Roi Nomus", email = "j.nomus.523625@umindanao.edu.ph" },
]
name = "MiRAG"
version = "0.1.0"
description = "Mind the (Context) Gap: Reducing AI Hallucination by Bridging Long-Context Retrieval and Information Refinement through Mindful RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "google-genai>=1.0.0",
    "gradcache>=0.0.1",
    "huggingface-hub>=0.28.1",
    "llama-index>=0.12.19",
    "llama-index-embeddings-huggingface>=0.5.1",
    "llama-index-llms-gemini>=0.4.10",
    "llama-index-tools-tavily-research>=0.3.0",
    "llama-index-utils-workflow>=0.3.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.2.2",
    "python-dotenv>=1.0.1",
    "tevatron",
    "tiktoken>=0.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "uvloop>=0.21.0",
    "wikiextractor",
    "torch",
    "pytorch-triton-rocm",
    "chromadb>=0.6.3",
    "llama-index-vector-stores-chroma>=0.4.1",
    "loguru>=0.7.3",
]

[dependency-groups]
lint =  [
"ruff>=0.9.5"
]
dev = [
    "icecream>=2.1.4",
    "peft>=0.14.0",
    "pre-commit>=4.1.0",
]

[project.scripts]
mirag = "mirag.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.sources]
wikiextractor = { git = "https://github.com/attardi/wikiextractor.git", rev = "ab8988ebfa9e4557411f3d4c0f4ccda139e18875" }
gradcache = { git = "https://github.com/luyug/GradCache" }
tevatron = { path = "../tevatron" }
torch = [
  { index = "pytorch-rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true


[tool.ruff]
line-length = 120
target-version = "py312"
